# FastAPIBeyondCRUD-

./: pyproject.toml
ex1/: main.py
ex2/: main1.py
ex3/: compose.yml
ex3/migrations/: env.py
ex3/migrations/versions/: 2b65cf20af25_add_review_table.py  637a8ec1d2b9_add_role_to_users.py  8efd5bc455c1_add_book_tags_table.py  bc7b11070c51_relate_users_to_books.py  c9b1c8b113de_add_password_hash.py  ecd3f854d3e3_init.py
ex3/src/: __init__.py  celery_tasks.py  config.py  errors.py  mail.py  middlewarre.py
ex3/src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
ex3/src/books/: book_data.py  models.py  routes.py  schemas.py  service.py
ex3/src/db/: main.py  models.py  redis.py
ex3/src/reviews/: routes.py  schemas.py  service.py
ex3/src/tags/: routes.py  schemas.py  service.py
ex3/src/tests/: conftest.py  test_auth.py  test_books.py
